--- a/index.html
+++ b/index.html
@@ -405,10 +405,10 @@
     </div>
 
   <!-- Footer Section -->
-<footer class="bg-white text-black p-0">
+<footer class="bg-white text-black">
     <!-- Let's Keep in Touch Section -->
     <div class="w-100 bg-light py-5 px-md-5">
-        <div class="container px-0">
+        <div class="container">
             <div class="row mx-0 align-items-center justify-content-between">
                 <div class="col-md-4 text-start px-4 px-md-0">
                     <h5 class="footer-head1 mb-0 px-md-4">Let’s Keep in Touch</h5>
