--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark py-5">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="#">Trace Mayer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <img src="asset/images/toggle.svg">
