--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     </nav>
 
     <!-- Main Section -->
-    <div class="container main-contain d-flex align-items-center justify-content-center min-vh-100">
+    <div class="container main-contain d-flex align-items-center justify-content-center">
         <div class="row align-items-center w-100">
             <!-- Text Section -->
             <div class="col-md-6 text-start  p-md-5">
