--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-md-6 text-start  p-md-5">
                 <p class="main-p1">PHILOSOPHER / ENTREPRENEUR / INVESTOR</p>
                 <h1 class="fw-bold display-4 main-h1">He who has the gold makes the rules.</h1>
-                <p class="mt-3 main-p2">
+                <p class="mt-3 pb-5 main-p2">
                     A core purpose of Trace Mayer is to be a champion of monetary sovereignty through non-violent cryptographic means for individuals to protect and preserve their agency and freedom from oppression in the very controversial political battle over money and property rights.
                 </p>
                 <button type="submit" class="btn1">About</button>
@@ -80,17 +80,17 @@
 
     <!-- Orange Section -->
     <div class="orange-section px-3 px-md-0">
-        <div class="container">
-            <h1 class="mt-3 text-start px-md-5 orange-h1">Investments</h1>
+        <div class="container gx-3 gy-sm-3">
+            <h1 class="mt-3 text-start px-md-5 orange-h1">Title in here</h1>
             <div class="row text-center">
-                <div class="col-md-6">
+                <div class="col-md-6 pb-5 pb-md-0">
                     <img src="asset/images/Container.png" alt="Speaking" class="img-fluid rounded p-md-5">
-                    <h4 class=" text-start px-md-5 orange-h4 mt-2 mt-md-0">Speaking</h4>
+                    <h4 class=" text-start px-md-5 orange-h4 mt-4 mt-md-0">Speaking</h4>
                     <p class="text-start px-md-5 orange-p">Due to being busy with other pursuits, Trace is no longer taking speaking requests.</p>
                 </div>
                 <div class="col-md-6">
                     <img src="asset/images/Container (1).png" alt="Investments" class="img-fluid rounded p-md-5">
-                    <h4 class="text-start px-md-5 orange-h4 mt-2 mt-md-0">Investments</h4>
+                    <h4 class="text-start px-md-5 orange-h4 mt-4 mt-md-0">Investments</h4>
                     <p class="text-start px-md-5 orange-p">There have been several blockchain-related investments made.</p>
                 </div>
             </div>
@@ -106,11 +106,11 @@
                     <h5 class="dark-head">Great ideas to help your business grow</h5>
                     <p class="dark-para">Branding is an intrinsic part of your company's success. Learn why your brand matters.</p>
                 </div>
-                <div class="col-md-4 p-md-5">
+                <div class="col-md-4 p-md-5 pt-3">
                     <h5 class=" dark-head">How to make your website page load speed fast</h5>
                     <p class="dark-para">Branding is an intrinsic part of your company's success. Learn why your brand matters.</p>
                 </div>
-                <div class="col-md-4 p-md-5">
+                <div class="col-md-4 p-md-5 pt-3">
                     <h5 class=" dark-head">Building design systems that scale across teams</h5>
                     <p class="dark-para">Design systems are an important part of modern web development. Learn best practices to scale your design system.</p>
                 </div>
@@ -150,7 +150,7 @@
     <div class="container px-4 p-md-0 py-5 py-md-0">
         <div class="row px-md-4">
             <!-- Trace Mayer -->
-            <div class="col-md-8 p-md-5">
+            <div class="col-md-7 p-md-5">
                 <h5 class="footer-head">Trace Mayer</h5>
                 <p class="footer-para mt-4 mt-md-0">Lorem ipsum dolor sit amet erat in puella.</p>
                 <div class="py-4">
@@ -173,7 +173,7 @@
             </div>
 
             <!-- Company -->
-            <div class="col-md-2 p-md-5">
+            <div class="col-md-3 p-md-5">
                 <h5 class="footer-head">Company</h5>
                 <ul class="list-unstyled">
                     <li><a href="#" class="text-black footer-li" style="text-decoration: none;">Blog</a></li>
