--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark py-5">
         <div class="container">
-            <a class="navbar-brand px-md-5 px-2" href="#">Trace Mayer</a>
+            <a class="navbar-brand px-md-5 px-2" href="#"><img src="asset/images/trace_logo.svg"></a>
             <button class="navbar-toggler px-3 px-md-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <img src="asset/images/toggle.svg">
             </button>
