--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="navbar-toggler px-3 px-md-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <img src="asset/images/toggle.svg">
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="px-3 collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto px-md-5">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Home</a>
