--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
     </nav>
 
     <!-- Main Section -->
-    <div class="container main-contain d-flex align-items-center justify-content-center">
-        <div class="row align-items-center w-100">
+    <div class="container main-contain d-flex align-items-start justify-content-center">
+        <div class="row align-items-start w-100">
             <!-- Text Section -->
-            <div class="col-md-6 text-start  p-md-5">
+            <div class="col-md-6 col-lg-5 text-start px-5">
                 <p class="main-p1">PHILOSOPHER / ENTREPRENEUR / INVESTOR</p>
                 <h1 class="fw-bold display-4 main-h1">He who has the gold makes the rules.</h1>
-                <p class="mt-3 pb-5 main-p2">
+                <p class=" main-p2">
                     A core purpose of Trace Mayer is to be a champion of monetary sovereignty through non-violent cryptographic means for individuals to protect and preserve their agency and freedom from oppression in the very controversial political battle over money and property rights.
                 </p>
                 <button type="submit" class="btn1">About</button>
             </div>
             <!-- Image Section -->
-            <div class="col-md-6">
-                <img src="asset/images/trace-mayer-high-res-3 1.png" alt="Profile Image" class="img-fluid">
+            <div class="col-md-6 col-lg-7 d-flex align-items-end justify-content-center ">
+                <img src="asset/images/trace-mayer-high-res-3 1.png" alt="Profile Image" class="img-fluid custom-image">
             </div>
         </div>
     </div>
@@ -85,12 +85,12 @@
             <div class="row text-center">
                 <div class="col-md-6 pb-5 pb-md-0">
                     <img src="asset/images/Container.png" alt="Speaking" class="img-fluid rounded p-md-5">
-                    <h4 class=" text-start px-md-5 orange-h4 mt-4 mt-md-0">Speaking</h4>
+                    <h4 class=" text-start px-md-5 orange-h4 mt-4 mt-md-1">Speaking</h4>
                     <p class="text-start px-md-5 orange-p">Due to being busy with other pursuits, Trace is no longer taking speaking requests.</p>
                 </div>
                 <div class="col-md-6">
                     <img src="asset/images/Container (1).png" alt="Investments" class="img-fluid rounded p-md-5">
-                    <h4 class="text-start px-md-5 orange-h4 mt-4 mt-md-0">Investments</h4>
+                    <h4 class="text-start px-md-5 orange-h4 mt-4 mt-md-1">Investments</h4>
                     <p class="text-start px-md-5 orange-p">There have been several blockchain-related investments made.</p>
                 </div>
             </div>
@@ -101,7 +101,7 @@
     <div class="dark-section text-center text-md-start p-md-4 px-3 px-md-0 py-5 py-md-0">
         <div class="container p-md-4">
             <div class="row">
-                <h5 class="mt-5 px-md-5 dark-h5 pb-md-0 pb-4">Recent Posts</h5>
+                <h5 class="mt-3 px-md-5 dark-h5 pb-md-0 pb-4">Recent Posts</h5>
                 <div class="col-md-4 p-md-5">
                     <h5 class="dark-head">Great ideas to help your business grow</h5>
                     <p class="dark-para">Branding is an intrinsic part of your company's success. Learn why your brand matters.</p>
