--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <div class="container main-contain d-flex align-items-start justify-content-center">
         <div class="row align-items-start w-100">
             <!-- Text Section -->
-            <div class="col-md-6 col-lg-5 text-start px-5">
+            <div class="col-md-6 col-lg-5 text-start px-md-5">
                 <p class="main-p1">PHILOSOPHER / ENTREPRENEUR / INVESTOR</p>
                 <h1 class="fw-bold display-4 main-h1">He who has the gold makes the rules.</h1>
-                <p class=" main-p2">
+                <p class=" main-p2 mt-3 pb-5">
                     A core purpose of Trace Mayer is to be a champion of monetary sovereignty through non-violent cryptographic means for individuals to protect and preserve their agency and freedom from oppression in the very controversial political battle over money and property rights.
                 </p>
                 <button type="submit" class="btn1">About</button>
@@ -84,12 +84,12 @@
             <h1 class="mt-3 text-start px-md-5 orange-h1">Title in here</h1>
             <div class="row text-center">
                 <div class="col-md-6 pb-5 pb-md-0">
-                    <img src="asset/images/Container.png" alt="Speaking" class="img-fluid rounded p-md-5">
+                    <img src="asset/images/home-img-1.jpg" alt="Speaking" class="img-fluid rounded p-md-5">
                     <h4 class=" text-start px-md-5 orange-h4 mt-4 mt-md-1">Speaking</h4>
                     <p class="text-start px-md-5 orange-p">Due to being busy with other pursuits, Trace is no longer taking speaking requests.</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="asset/images/Container (1).png" alt="Investments" class="img-fluid rounded p-md-5">
+                    <img src="asset/images/home-img-2.jpg" alt="Investments" class="img-fluid rounded p-md-5">
                     <h4 class="text-start px-md-5 orange-h4 mt-4 mt-md-1">Investments</h4>
                     <p class="text-start px-md-5 orange-p">There have been several blockchain-related investments made.</p>
                 </div>
@@ -121,13 +121,13 @@
   <!-- Footer Section -->
 <footer class="bg-white text-black">
     <!-- Let's Keep in Touch Section -->
-    <div class="w-100 bg-light py-5 px-md-5">
-        <div class="container">
+    <div class="w-100 bg-light  px-md-5">
+        <div class="container py-2 py-md-5 px-4">
             <div class="row mx-0 align-items-center justify-content-between">
-                <div class="col-md-4 text-start px-4">
+                <div class="col-md-4 text-start">
                     <h5 class="footer-head1 mb-0 px-md-4">Let’s Keep in Touch</h5>
                 </div>
-                <div class="col-md-8 text-center text-md-end px-md-5 py-2 py-md-0 px-4">
+                <div class="col-md-8 text-center text-md-end px-md-5 py-2 py-md-0 ">
                     <div class="row">
                         <div class="col-md-9 col-sm-12  mt-4 mt-md-0">
                             <form class="d-flex align-items-center justify-content-center justify-content-md-end">
