--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="container py-2 py-md-5 px-4">
             <div class="row mx-0 align-items-center justify-content-between">
                 <div class="col-md-4 text-start">
-                    <h5 class="footer-head1 mb-0 px-md-4">Let’s Keep in Touch</h5>
+                    <h5 class="footer-head1 mb-0 px-md-4 px-2">Let’s Keep in Touch</h5>
                 </div>
                 <div class="col-md-8 text-center text-md-end px-md-5 py-2 py-md-0 ">
                     <div class="row">
