--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Brettenham House</title>
-    <meta name="description" content="120,000 SQ FT of crafted workspace. Outstanding design meets natural beauty. Panoramic views across the river. Iconic riverside location. Available Q1 2026">
+    <title>Trace Mayer</title>
+    <meta name="description" content="A core purpose of Trace Mayer is to be a champion of monetary sovereignty through">
     <meta name="author" content="Other Alias">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#FFFFFF"/>
@@ -17,13 +17,15 @@
     <link rel="stylesheet" href="asset/css/style.css">
     <!-- Open Graph -->
     <meta property='og:title' content='Brettenham House' />
-    <meta property='og:description' content='120,000 SQ FT OF CRAFTED WORKSPACE. OUTSTANDING DESIGN MEETS NATURAL BEAUTY. PANORAMIC VIEWS ACROSS THE RIVER. ICONIC RIVERSIDE LOCATION. AVAILABLE Q1 2026' />
+    <meta property='og:description' content='A core purpose of Trace Mayer is to be a champion of monetary
+     sovereignty through' />
     <meta property='og:type' content='website' />
     <meta property='og:image' content='https://www.brettenhamhouse.com/assets/images/share.jpg' />
     <!-- Twitter Card -->
-    <meta property='twitter:title' content='Brettenham House' />
+    <meta property='twitter:title' content='Trace Mayer' />
     <meta property='twitter:card' content='summary' />
-    <meta property='twitter:description' content='120,000 SQ FT OF CRAFTED WORKSPACE. OUTSTANDING DESIGN MEETS NATURAL BEAUTY. PANORAMIC VIEWS ACROSS THE RIVER. ICONIC RIVERSIDE LOCATION. AVAILABLE Q1 2026' />
+    <meta property='twitter:description' content='A core purpose of Trace Mayer is to be a champion of monetary
+    sovereignty through' />
     <meta property='twitter:image' content='https://www.brettenhamhouse.com/assets/images/share.jpg' />
     
 </head>
@@ -67,7 +69,8 @@
                 <p class="main-p1">PHILOSOPHER / ENTREPRENEUR / INVESTOR</p>
                 <h1 class="fw-bold display-4 main-h1">He who has the gold makes the rules.</h1>
                 <p class=" main-p2 mt-3 pb-5">
-                    A core purpose of Trace Mayer is to be a champion of monetary sovereignty through non-violent cryptographic means for individuals to protect and preserve their agency and freedom from oppression in the very controversial political battle over money and property rights.
+                    A core purpose of Trace Mayer is to be a champion of monetary sovereignty through non-violent cryptographic means for individuals to protect and preserve their
+                     agency and freedom from oppression in the very controversial political battle over money and property rights.
                 </p>
                 <button type="submit" class="btn1">About</button>
             </div>
