--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
 <footer class="bg-white text-black">
     <!-- Let's Keep in Touch Section -->
     <div class="w-100 bg-light  px-md-5">
-        <div class="container py-2 py-md-5 px-4">
+        <div class="container p-md-5 p-3 ">
             <div class="row mx-0 align-items-center justify-content-between">
                 <div class="col-md-4 text-start">
-                    <h5 class="footer-head1 mb-0 px-md-4 px-2">Let’s Keep in Touch</h5>
+                    <h5 class="footer-head1 mb-0">Let’s Keep in Touch</h5>
                 </div>
                 <div class="col-md-8 text-center text-md-end px-md-5 py-2 py-md-0 ">
                     <div class="row">
