--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property='twitter:card' content='summary' />
     <meta property='twitter:description' content='A core purpose of Trace Mayer is to be a champion of monetary
     sovereignty through' />
-    <meta property='twitter:image' content='https://www.brettenhamhouse.com/assets/images/share.jpg' />
+    <meta property='twitter:image' content='' />
     
 </head>
 
@@ -40,7 +40,7 @@
                <img src="asset/images/toggle.svg">
             </button>
             <div class="px-3 collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto px-md-5">
+                <ul class="navbar-nav ms-auto px-md-5 pt-4 pt-md-0">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Home</a>
                     </li>
@@ -87,12 +87,12 @@
             <h1 class="mt-5 text-start px-md-5 orange-h1">Title in here</h1>
             <div class="row text-center">
                 <div class="col-md-6 pb-5 pb-md-0">
-                    <img src="asset/images/home-img-1.jpg" alt="Speaking" class="img-fluid rounded p-md-5">
+                    <img src="asset/images/home-img-1.jpg" alt="Speaking" class="img-fluid p-md-5">
                     <h4 class=" text-start px-md-5 orange-h4 mt-4 mt-md-1">Speaking</h4>
                     <p class="text-start px-md-5 orange-p">Due to being busy with other pursuits, Trace is no longer taking speaking requests.</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="asset/images/home-img-2.jpg" alt="Investments" class="img-fluid rounded p-md-5">
+                    <img src="asset/images/home-img-2.jpg" alt="Investments" class="img-fluid p-md-5">
                     <h4 class="text-start px-md-5 orange-h4 mt-4 mt-md-1">Investments</h4>
                     <p class="text-start px-md-5 orange-p">There have been several blockchain-related investments made.</p>
                 </div>
@@ -125,7 +125,7 @@
 <footer class="bg-white text-black">
     <!-- Let's Keep in Touch Section -->
     <div class="w-100 bg-light  px-md-5">
-        <div class="container p-md-5 p-3 ">
+        <div class="container p-md-5 p-3 py-5 ">
             <div class="row mx-0 align-items-center justify-content-between">
                 <div class="col-md-4 text-start">
                     <h5 class="footer-head1 mb-0">Let’s Keep in Touch</h5>
