--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <button type="submit" class="btn1">About</button>
             </div>
             <!-- Image Section -->
-            <div class="col-md-6 col-lg-7 d-flex align-items-end justify-content-center ">
+            <div class="col-md-6 col-lg-7 d-flex align-items-end justify-content-center p-0">
                 <img src="asset/images/trace-mayer-high-res-3 1.png" alt="Profile Image" class="img-fluid custom-image">
             </div>
         </div>
@@ -84,7 +84,7 @@
     <!-- Orange Section -->
     <div class="orange-section px-3 px-md-0">
         <div class="container gx-3 gy-sm-3">
-            <h1 class="mt-5 text-start px-md-5 orange-h1">Title in here</h1>
+            <h1 class="mt-1 mt-md-5 text-start px-md-5 orange-h1">Title in here</h1>
             <div class="row text-center">
                 <div class="col-md-6 pb-5 pb-md-0">
                     <img src="asset/images/home-img-1.jpg" alt="Speaking" class="img-fluid p-md-5">
@@ -104,7 +104,7 @@
     <div class="dark-section text-center text-md-start p-md-4 px-3 px-md-0 py-5 py-md-0">
         <div class="container p-md-4">
             <div class="row">
-                <h5 class="mt-5 px-md-5 dark-h5 pb-md-0 pb-4">Recent Posts</h5>
+                <h5 class="mt-md-5 mt-3 px-md-5 dark-h5 pb-md-0 pb-3">Recent Posts</h5>
                 <div class="col-md-4 p-md-5">
                     <h5 class="dark-head">Great ideas to help your business grow</h5>
                     <p class="dark-para">Branding is an intrinsic part of your company's success. Learn why your brand matters.</p>
