--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <h4 class=" text-start px-md-5 orange-h4 mt-4 mt-md-1">Speaking</h4>
                     <p class="text-start px-md-5 orange-p">Due to being busy with other pursuits, Trace is no longer taking speaking requests.</p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 pb-2">
                     <img src="asset/images/home-img-2.jpg" alt="Investments" class="img-fluid p-md-5">
                     <h4 class="text-start px-md-5 orange-h4 mt-4 mt-md-1">Investments</h4>
                     <p class="text-start px-md-5 orange-p">There have been several blockchain-related investments made.</p>
