--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container main-contain d-flex align-items-start justify-content-center">
         <div class="row align-items-start w-100">
             <!-- Text Section -->
-            <div class="col-md-6 col-lg-5 text-start pb-5 px-md-5">
+            <div class="col-md-6 col-lg-5 text-start pb-md-5 px-md-5">
                 <p class="main-p1">PHILOSOPHER / ENTREPRENEUR / INVESTOR</p>
                 <h1 class="fw-bold display-4 main-h1">He who has the gold makes the rules.</h1>
                 <p class=" main-p2 mt-3 pb-5">
@@ -76,7 +76,7 @@
             </div>
             <!-- Image Section -->
             <div class="col-md-6 col-lg-7 d-flex align-items-end justify-content-center p-0">
-                <img src="asset/images/trace-mayer-high-res-3 1.png" alt="Profile Image" class="img-fluid custom-image">
+                <img src="asset/images/trace-mayer-home-hero-1.jpg" alt="Profile Image" class="img-fluid custom-image">
             </div>
         </div>
     </div>
@@ -132,12 +132,12 @@
                 </div>
                 <div class="col-md-8 text-center text-md-end px-md-5 py-2 py-md-0 ">
                     <div class="row">
-                        <div class="col-md-9 col-sm-12  mt-4 mt-md-0">
+                        <div class="col-lg-9 col-md-7 col-sm-12  mt-4 mt-md-0">
                             <form class="d-flex align-items-center justify-content-center justify-content-md-end">
                                 <input type="email" class="form-control" placeholder="Your email address">
                             </form>
                         </div>
-                        <div class="col-md-3 col-sm-12 mt-4 mt-md-0">
+                        <div class="col-lg-3 col-md-5 col-sm-12 mt-4 mt-md-0">
                             <form class="d-flex align-items-center justify-content-md-center justify-content-start justify-content-md-end">
                                 <button type="submit" class="btn1">Submit</button>
                             </form>  
