--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
-    <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- Open Graph -->
     <meta property='og:title' content='Brettenham House' />
     <meta property='og:description' content='A core purpose of Trace Mayer is to be a champion of monetary
      sovereignty through' />
     <meta property='og:type' content='website' />
-    <meta property='og:image' content='https://www.brettenhamhouse.com/assets/images/share.jpg' />
+    <meta property='og:image' content='https://www.brettenhamhouse.com/assetss/images/share.jpg' />
     <!-- Twitter Card -->
     <meta property='twitter:title' content='Trace Mayer' />
     <meta property='twitter:card' content='summary' />
@@ -35,9 +35,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark py-5">
         <div class="container">
-            <a class="navbar-brand px-md-5 px-2" href="#"><img src="asset/images/trace_logo.svg"></a>
+            <a class="navbar-brand px-md-5 px-2" href="#"><img src="assets/images/trace_logo.svg"></a>
             <button class="navbar-toggler px-3 px-md-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-               <img src="asset/images/toggle.svg">
+               <img src="assets/images/toggle.svg">
             </button>
             <div class="px-3 collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto px-md-5 pt-4 pt-md-0">
@@ -76,7 +76,7 @@
             </div>
             <!-- Image Section -->
             <div class="col-md-6 col-lg-7 d-flex align-items-end justify-content-center p-0">
-                <img src="asset/images/trace-mayer-home-hero-1.jpg" alt="Profile Image" class="img-fluid custom-image">
+                <img src="assets/images/trace-mayer-home-hero-1.jpg" alt="Profile Image" class="img-fluid custom-image">
             </div>
         </div>
     </div>
@@ -87,12 +87,12 @@
             <h1 class="mt-1 mt-md-5 text-start px-md-5 orange-h1">Title in here</h1>
             <div class="row text-center">
                 <div class="col-md-6 pb-5 pb-md-0">
-                    <img src="asset/images/home-img-1.jpg" alt="Speaking" class="img-fluid p-md-5">
+                    <img src="assets/images/home-img-1.jpg" alt="Speaking" class="img-fluid p-md-5">
                     <h4 class=" text-start px-md-5 orange-h4 mt-4 mt-md-1">Speaking</h4>
                     <p class="text-start px-md-5 orange-p">Due to being busy with other pursuits, Trace is no longer taking speaking requests.</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="asset/images/home-img-2.jpg" alt="Investments" class="img-fluid p-md-5">
+                    <img src="assets/images/home-img-2.jpg" alt="Investments" class="img-fluid p-md-5">
                     <h4 class="text-start px-md-5 orange-h4 mt-4 mt-md-1">Investments</h4>
                     <p class="text-start px-md-5 orange-p">There have been several blockchain-related investments made.</p>
                 </div>
