--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
             <div class="px-3 collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto px-md-5 pt-4 pt-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My Story</a>
+                        <a class="nav-link" href="story.html">My Story</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Experience</a>
+                        <a class="nav-link" href="investments.html">Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="speaking.html">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
