--- a/investments.html
+++ b/investments.html
@@ -42,7 +42,7 @@
             <div class="px-3 collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto px-md-5 pt-4 pt-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="home.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="story.html">My Story</a>
@@ -66,7 +66,7 @@
     <div class="container">
         <div class="row w-100">
             <div class="col-md-8 text-start pb-md-5 px-md-5">
-                <p class="main-p1">October 27, 2015</p>
+                <p class="main-p1 ps-3">October 27, 2015</p>
                 <h1 class="fw-bold display-4 main-h1 pb-md-4 px-2">Investments</h1>
                <p class="px-2">There have been several blockchain related investments made. The general thesis is that there are seven network effects taking place with Bitcoin: (1) Speculation, (2) Merchants, (3) Consumers, (4) Security/Miners, (5) Developers, (6) Financailization and (7) Settlement Currency.</p>
                <p class="px-2">The investments are to start at the beginning of these network effects.
@@ -104,8 +104,8 @@
 
                     <iframe class="yt-vid" src="https://www.youtube.com/embed/tsu01TR7Ofk?si=SH7UAwgbpAH0mLa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p class="ps-2 pt-5">Bitcoin is an amazing technological innovation enabling the transfer of value over a communications channel. There are many different use cases for individuals to buy and hold Bitcoin.</p>
-                    <p class="ps-2">
-                        Understanding the job that needs to be done is critical for prioritizing what extensibility to focus on
+                    <p class="ps-2 ">
+                        Understanding the job that needs to be done is critical for prioritizing what extensibility to focus on.
                     </p>
                     <h2 class="fw-bold display-4 pb-md-4 px-2 py-md-4">Major Categories For Hiring Bitcoin</h2>
                     <p class="ps-2">
