--- a/story.html
+++ b/story.html
@@ -32,35 +32,41 @@
 
 <body class="text-white">
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark py-5">
-        <div class="container">
-            <a class="navbar-brand px-md-5 px-2" href="#"><img src="assets/images/trace_logo.svg"></a>
-            <button class="navbar-toggler px-3 px-md-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-               <img src="assets/images/toggle.svg">
-            </button>
-            <div class="px-3 collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto px-md-5 pt-4 pt-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="story.html">My Story</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="investments.html">Experience</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="speaking.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
+   <!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark py-5">
+    <div class="container">
+        <a href="index.html" class="navbar-brand px-md-5 px-2">
+            <img src="assets/images/trace_logo.svg" alt="Logo" class="logo">
+        </a>
+        <button class="navbar-toggler px-3 px-md-0" id="navbarToggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- Single icon container -->
+            <div class="navbar-toggler-icon">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
             </div>
+        </button>
+        <div class="px-3 collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto px-md-5 pt-4 pt-md-0">
+                <li class="nav-item">
+                    <a class="nav-link " href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="story.html">My Story</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="investments.html">Experience</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="speaking.html">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
         </div>
-    </nav>
-
+    </div>
+</nav>
     <!-- Main Section -->
     <div class="container">
         <div class="row w-100">
@@ -82,33 +88,33 @@
     </div>
 
     <!-- story Section -->
-    <div class="black-section ">
+    <div class="black-section py-md-5">
         <div class="container ps-md-3">
            <div class="row">
             <div class="col-md-8 ps-md-5">
               
-                    <iframe class="yt-vid p-0" src="https://www.youtube.com/embed/tsu01TR7Ofk?si=SH7UAwgbpAH0mLa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <p class="ps-2 pt-md-5 pt-2">In 2013 he helped organize and presented at the first Bitcoin conference. He also helped GATA accept Bitcoin and has been a GATA supporter since the 2000's</p>
+                    <iframe class="yt-vid p-0" src="https://www.youtube.com/embed/TCU-soMs1wY?si=nWhuX3bdzfpMD5Ci" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p class="ps-2 pt-md-5 pt-2">In 2013 he helped organize and <a href="https://www.youtube.com/watch?v=bW6hxEuoHAI" target="_blank" class="text-link">presented</a>  at the first Bitcoin conference. He also <a href="https://www.gata.org/node/12105" target="_blank" class="text-link"> helped GATA accept Bitcoin</a> and has been a <a href="https://www.gata.org/"  target="_blank" class="text-link">GATA</a>  supporter since the 2000's</p>
                     <p class="ps-2">Bitcoin is fulfilling its destiny, as he explained and predicted in 2010, and in January 2021 the Bitcoin market cap had massively swollen to over $800B
                     </p>
-                    <p class="ps-2">He coined the term: The Hodler of Last Resort and started the annual Proof of Keys celebration. During 2021 Proof of Keys approximately more than $3B of Bitcoin was withdrawn from exchanges</p>
+                    <p class="ps-2">He coined the term: <a href="The Hodler of Last Resort" target="_blank" class="text-link">The Hodler of Last Resort</a>  and started the annual <a href="https://www.proofofkeys.com/" target="_blank" class="text-link" >Proof of Keys</a>  celebration. During 2021 Proof of Keys approximately more than $3B of Bitcoin was withdrawn from exchanges</p>
                     <p class="ps-2">
-                        To continue executing his purpose, Trace Mayer hosts the extremely popular Bitcoin Knowledge Podcast which includes interviews with the top people in the Bitcoin space.</p>
+                        To continue executing his purpose, Trace Mayer hosts the extremely popular <a href="https://www.bitcoin.kn/"  target="_blank" class="text-link">Bitcoin Knowledge Podcast</a>  which includes interviews with the top people in the Bitcoin space.</p>
                     <p class="ps-2">From Isaac Newton, a supernal monetary scientist who as Master of the Mint created the gold standard, to Nikola Tesla to Steve Jobs it is the innovators and disrupters that forever change markets as well as our lives</p>
                     <p class="ps-2 pb-md-5 pb-2">
                             The currency markets are the largest markets in the world, ripe for innovation and massive fortunes will be transferred and made in the creative destruction.
-                            Blockchain technology holds the most disruptive potential for actually being able to execute such massive creative destruction as capital burrows down the liquidity pyramid into safer and more liquid assets like gold and Bitcoin.</p>
+                            Blockchain technology holds the most disruptive potential for actually being able to execute such massive creative destruction as capital burrows down the  <a href="https://www.liquiditypyramid.com/"  target="_blank" class="text-link">liquidity pyramid</a>  into safer and more liquid assets like gold and Bitcoin.</p>
 
-                    <iframe  class="yt-vid p-0" src="https://www.youtube.com/embed/tsu01TR7Ofk?si=SH7UAwgbpAH0mLa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <p class="ps-2 pt-md-5 pt-2">The main purpose of Trace Mayer's work, almost all of it provided to all mankind for free and at great risk to himself since tyrants love to silence the conscience, is to provide ideas and information on monetary science and economics that will help prepare people to combat the extremely dangerous false ideas currently in the marketplace that are causing many undesirable and harmful effects worldwide.</p>
+                    <iframe  class="yt-vid p-0" src="https://www.youtube.com/embed/mgpDuH17T0Y?si=4J1me8Em7ZoymLo7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p class="ps-2 pt-md-5 pt-2">The main purpose of <a href="https://www.weusecoins.com/trace-mayer/"  target="_blank" class="text-link">Trace Mayer's</a> work, almost all of it provided to all mankind for free and at great risk to himself since tyrants love to silence the conscience, is to provide ideas and information on monetary science and economics that will help prepare people to combat the extremely dangerous false ideas currently in the marketplace that are causing many undesirable and harmful effects worldwide.</p>
                     <p class="ps-2">Ideas can only be overcome by other ideas. Money and force are impotent against ideas. Government abuse of currency has enabled many evils including the rise of dictators and perpetuation of genocide. The abandonment of sound money is the chief reason, if not the only reason, that the world has become such a dangerous place.
                     </p>
                     <p class="ps-2">These issues are not new and have been thoroughly explored by the world's greatest polymaths.
-                        In 1722, polymath Emanuel Swedenborg wrote a paper to the Swedish House of Nobles concerning the negative effects of inflation and benefits of sound money.</p>
-                    <p class="ps-md-5 px-4 yellow-highlight">I wonder how much care for the kingdom's welfare people have who insist on deflating the currency "for the good of the country" in spite of the fact that the country's main source of wealth is put at risk. It is clear how much domestic trade depends on the value of currency: it is founded on it, and a devaluation would affect not only the currency but also far more important matters.<br><br>When a harmful custom becomes habitual in a country, does not that custom acquire power and authority? Whatever the reason, it may become more and more firmly entrenched, and ultimately invincible. I would here argue that it is not easy to change something that has gained strength over so many years and in so many instances.</p>
-                    <p class="ps-2">In 1832, polymath Johann Wolfgang von Goethe published Faust Part Two, his magnum opus and considered to be the greatest work of German literature, which warned about the deleterious effects stemming from abuse of currency starting on line 4,925.</p>
+                        In 1722, polymath Emanuel Swedenborg wrote a <a href="assets/swedenborg-inflation-paper.pdf" target="_blank" class="text-link"> paper to the Swedish House of Nobles</a> concerning the negative effects of inflation and benefits of sound money.</p>
+                    <p class="ps-md-4 px-4 yellow-highlight">I wonder how much care for the kingdom's welfare people have who insist on deflating the currency "for the good of the country" in spite of the fact that the country's main source of wealth is put at risk. It is clear how much domestic trade depends on the value of currency: it is founded on it, and a devaluation would affect not only the currency but also far more important matters.<br><br>When a harmful custom becomes habitual in a country, does not that custom acquire power and authority? Whatever the reason, it may become more and more firmly entrenched, and ultimately invincible. I would here argue that it is not easy to change something that has gained strength over so many years and in so many instances.</p>
+                    <p class="ps-2">In 1832, polymath Johann Wolfgang von Goethe published Faust Part Two, his magnum opus and considered to be the greatest work of German literature, which warned about the deleterious effects stemming from abuse of currency <a href="starting on line 4,925" target="_blank" class="text-link">starting on line 4,925</a> .</p>
                     <p class="ps-2">In 1844, United States Presidential candidate Joseph Smith said:</p>
-                    <p class="ps-md-5 px-4 pb-5 yellow-highlight">I consider that it is not only prudential, but absolutely necessary to protect the inhabitants of this city from being imposed upon by a spurious currency...I think it much safer to go upon the hard money system altogether. I have examined the Constitution upon this subject and find my doubts removed...<br><br>Article I, Section 10 declares that nothing else except gold and silver shall be lawful tender...The different states, and even Congress itself, have passed many laws diametrically contrary to the Constitution of the United States...The Constitution acknowledges that the people have all power not reserved to itself.</p>
+                    <p class="ps-md-4 px-4 yellow-highlight">I consider that it is not only prudential, but absolutely necessary to protect the inhabitants of this city from being imposed upon by a spurious currency...I think it much safer to go upon the hard money system altogether. I have examined the Constitution upon this subject and find my doubts removed...<br><br>Article I, Section 10 declares that nothing else except gold and silver shall be lawful tender...The different states, and even Congress itself, have passed many laws diametrically contrary to the Constitution of the United States...The Constitution acknowledges that the people have all power not reserved to itself.</p>
             </div>
                
             </div>
@@ -165,7 +171,7 @@
             <div class="col-md-2 p-md-5 py-4 py-0">
                 <h5 class="footer-head">Projects</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#" class="text-black footer-li" style="text-decoration: none;">Project 1</a></li>
+                    <li><a href="#" class="text-black footer-li" >Project 1</a></li>
                     <li><a href="#" class="text-black footer-li" style="text-decoration: none;">Project 2</a></li>
                     <li><a href="#" class="text-black footer-li" style="text-decoration: none;">Project 3</a></li>
                     <li><a href="#" class="text-black footer-li" style="text-decoration: none;">Project 4</a></li>
@@ -191,5 +197,31 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+      const navbarToggler = document.getElementById("navbarToggler");
+      const navbarCollapse = document.getElementById("navbarNav");
+  
+      navbarToggler.addEventListener("click", () => {
+          const isExpanded = navbarToggler.getAttribute("aria-expanded") === "true";
+  
+          // Toggle the "open" class on the navbar-toggler
+          navbarToggler.classList.toggle("open", !isExpanded);
+      });
+  
+      navbarCollapse.addEventListener("hidden.bs.collapse", () => {
+          // Remove the "open" class when the menu is fully closed
+          navbarToggler.classList.remove("open");
+      });
+  
+      navbarCollapse.addEventListener("shown.bs.collapse", () => {
+          // Add the "open" class when the menu is fully opened
+          navbarToggler.classList.add("open");
+      });
+  });
+  
+  
+  
+      </script>
 </body>
 </html>
