--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <button class="navbar-toggler px-3 px-md-0" id="navbarToggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <!-- Single icon container -->
-            <div class="navbar-toggler">
+            <div class="navbar-toggler-icon">
                 <span class="line"></span>
                 <span class="line"></span>
                 <span class="line"></span>
