--- a/investments.html
+++ b/investments.html
@@ -77,15 +77,15 @@
                <p class="px-2">There have been several blockchain related investments made. The general thesis is that there are seven network effects taking place with Bitcoin: (1) Speculation, (2) Merchants, (3) Consumers, (4) Security/Miners, (5) Developers, (6) Financailization and (7) Settlement Currency.</p>
                <p class="px-2">The investments are to start at the beginning of these network effects.
                </p>
-               <div class="row px-2 px-md-0">
+               <div class="row py-3">
                 <div class="col-md-4">
-                    <img src="assets/images/investements/logo-armory.png" style="height: auto; width: 100%;" class="img-fluid logo1 p-lg-3 py-lg-3">
+                    <img src="assets/images/investements/logo-armory.png"  class="img-fluid-invest">
                 </div>
                 <div class="col-md-4">
-                    <img src="assets/images/investements/logo-bitpay.png" style="height: auto; width: 100%; max-width: 80%; margin-left: 30px;" class="img-fluid logo2 p-lg-4 py-lg-1">
+                    <img src="assets/images/investements/logo-bitpay.png"  class="img-fluid-invest">
                 </div>
                 <div class="col-md-4">
-                    <img src="assets/images/investements/logo-kraken.png" style="height: auto; width: 100%;" class="img-fluid logo3 p-lg-5 py-lg-1">
+                    <img src="assets/images/investements/logo-kraken.png"  class="img-fluid-invest">
                 </div>
                </div>
                <p class="px-2">To properly speculate the private keys must be properly secured hence the investment in Armory and to be traded there must be an exchange, Kraken.</p>
