--- a/investments.html
+++ b/investments.html
@@ -81,7 +81,7 @@
                 <div class="col-md-4">
                     <img src="assets/images/investements/logo-armory.png"  class="img-fluid-invest">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 py-2 py-md-0">
                     <img src="assets/images/investements/logo-bitpay.png"  class="img-fluid-invest">
                 </div>
                 <div class="col-md-4">
